fix pre tag overflow issues

--- a/public/styles/content.module.css
+++ b/public/styles/content.module.css
@@ -48,6 +48,9 @@
   padding: 1rem;
   overflow: auto;
   margin: 1.75rem 0 0 0;
+  white-space: pre-wrap;
+  word-break: break-word;
+  hyphens: auto;
 }
 
 .content pre code {
@@ -65,6 +68,7 @@
   border-radius: 3px;
   font-weight: 400;
   color: #ec4899;
+  /* color: #14b8a6; */
 }
 
 .content blockquote {
@@ -82,7 +86,7 @@
   margin-top: 0.1em;
   margin-left: -0.2em;
   z-index: -1;
-  color: green;
+  color: rgba(33, 208, 33, 0.571);
 }
 
 .content table {
